fix dark mode not being right on users system preference

--- a/src/css/global/variables.css
+++ b/src/css/global/variables.css
@@ -47,14 +47,16 @@
     --color-mode: 'dark';
   }
   :root:not([dark-mode="true"]) {
-    --background: var(--color-dark);
-    --text-color: var(--color-light);  
-    --button-icon: var(--icon-sun);
-    --button-icon-filter: var(--icon-sun-filter);
-    --button-background: var(--color-light-alpha);
-    --button-color: var(--color-dark);
-    --border-color: var(--color-mid-light);
-    --bubble-bg: var(--color-accent-2);
+  --background: var(--color-dark);
+  --text-color: var(--color-light-alpha);
+  --button-icon: var(--icon-sun);
+  --button-icon-filter: var(--icon-sun-filter);
+  --button-background: var(--color-light-alpha);
+  --button-color: var(--color-dark);
+  --border-color: var(--color-mid-light);
+  --b-top: 1px solid var(--border-color);
+  --subheadings-color: var(--color-accent);
+  --bubble-bg: var(--color-accent-2);
   }
 }
 
